--- a/sirasu_riri.html
+++ b/sirasu_riri.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
         <h1>シラスりりのHP</h1>
         <hr size="5" width="100%" noshade>
   </head>
