--- a/sirasu.html
+++ b/sirasu.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
         <h1>シラスりりのHP</h1>
         <hr size="5" width="100%" noshade>
   </head>
@@ -11,10 +9,10 @@
     <div style="background-color: #ffffff;">
  　　　　　　<h1>■シラスりり</h1>
     <h2>SIRASURIRI</h2>
-    <a href="https://www.youtube.com/channel/UCHv25XMX_cEx6AicS3Nem7A"><img src="https://yt3.ggpht.com/ytc/AKedOLTPEXMAMhlk3Tgoplull6IwydrbBDlxzFq7xRBP378=s600-c-k-c0x00ffffff-no-rj-rp-mo" alt="youtube"></a>
+    <a href="https://www.youtube.com/channel/UCHv25XMX_cEx6AicS3Nem7A"><img src="https://uploda1.ysklog.net/uploda/019de98d19.png" alt="youtube"></a>
     <h1>■Live2D作品</h1>
     <h1>■イラスト</h1>
-    <img src="https://uploda1.ysklog.net/uploda/dabc87aaa3.png
+    <img src="https://uploda1.ysklog.net/uploda/9d16e6a490.png
 ">
     <h1>■Youtube</h1>
      <h1>■主な活動歴</h1>
