--- a/sirasu.html
+++ b/sirasu.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-        <h1>シラスりりのHP</h1>
-        <hr size="5" width="100%" noshade>
+       <meta charset="UTF-8" />
+    <link rel="stylesheet" href="sirasu.css" />
+    <link rel="canonical" href="sirasu-riri.github.io/sirasuriri.com/">
+    <link rel="icon" href="https://uploda1.ysklog.net/uploda/019de98d19.png" sizes="32x32" />
+<link rel="icon" href="https://uploda1.ysklog.net/uploda/019de98d19.png" sizes="192x192" />
+<link rel="apple-touch-icon-precomposed" href="https://uploda1.ysklog.net/uploda/019de98d19.png" />
+     <title>シラスりりのHP</title>
   </head>
   
   <body>
+           <h1>シラスりりのHP</h1>
+        <hr size="5" width="100%" noshade>
     <div style="background-color: #ffffff;">
  　　　　　　<h1>■シラスりり</h1>
     <h2>SIRASURIRI</h2>
@@ -54,5 +61,7 @@
       </div>
             <hr size="5" width="100%" noshade>
             <h4>＠2022 シラスのよくばりVarietyPack</h4>
+
+ <script src="sirasu.js"></script>
 </body>
 </html>
